yacc-study/yacc-test/the.output
Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | commands command

    3 command: heat_switch
    4        | send_packet
    5        | target_set
    6        | EXIT
    7        | enter
    8        | help
    9        | data_plan_reset
   10        | ac_add
   11        | ac_del
   12        | ac_request
   13        | port_set
   14        | port_request
   15        | mini_jumbo_set
   16        | wtp_add
   17        | wtp_del
   18        | wtp_del_all
   19        | wtp_request_all
   20        | wtp_request_serial
   21        | wtp_request
   22        | sta_add
   23        | sta_del_all
   24        | sta_del
   25        | sta_request_all
   26        | sta_request_serial
   27        | sta_request
   28        | wtp_acl_add
   29        | wtp_acl_del_all
   30        | wtp_acl_del
   31        | wtp_acl_request_all
   32        | wtp_acl_request_serial
   33        | cal_request_wtp
   34        | sta_acl_add
   35        | sta_acl_del_all
   36        | sta_acl_del
   37        | sta_acl_request_all
   38        | sta_acl_request_serial
   39        | cal_request_sta
   40        | cpu_set
   41        | data_plan_run_time
   42        | data_plan_cpu
   43        | data_plan_packet

   44 heat_switch: TOKHEAT STATE

   45 send_packet: SEND PACKET

   46 help: HELP EOS

   47 enter: EOS

   48 target_set: TOKTARGET TOKTEMPERATURE

   49 data_plan_reset: DATA_PLAN_RESET EOS

   50 ac_add: ADD AC _INT_ IP _IPADDR_ MAC _MACADDR_ EOS

   51 ac_del: DEL AC _INT_ IP _IPADDR_ MAC _MACADDR_ EOS

   52 ac_request: SHOW AC INFO EOS

   53 port_set: SET CAPWAP CTR_PORT _INT_ DATA_PORT _INT_ EOS

   54 port_request: SHOW CAPWAP PORT EOS

   55 mini_jumbo_set: SET MINI_JUMBO STATE EOS

   56 wtp_add: ADD WTP _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS

   57 wtp_del: DEL WTP _INT_ MAC _MACADDR_ EOS

   58 wtp_del_all: DEL WTP ALL EOS

   59 wtp_request_all: SHOW WTP ALL INFO EOS

   60 wtp_request_serial: SHOW WTP INDEX _INT_ _INT_ EOS

   61 wtp_request: SHOW WTP _INT_ MAC _MACADDR_ EOS

   62 sta_add: ADD STA _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS

   63 sta_del_all: DEL STA ALL EOS

   64 sta_del: DEL STA _INT_ MAC _MACADDR_ EOS

   65 sta_request_all: SHOW STA ALL INFO EOS

   66 sta_request_serial: SHOW STA INDEX _INT_ _INT_ EOS

   67 sta_request: SHOW STA _INT_ MAC _MACADDR_ EOS

   68 wtp_acl_add: ADD ACL WTP TYPE _INT_ _INT_ MAC _MACADDR_ EOS

   69 wtp_acl_del_all: DEL ACL WTP ALL EOS

   70 wtp_acl_del: DEL ACL WTP _INT_ MAC _MACADDR_ EOS

   71 wtp_acl_request_all: SHOW WTP ALL ACL EOS

   72 wtp_acl_request_serial: SHOW WTP _INT_ _INT_ ACL EOS

   73 cal_request_wtp: SHOW ACL _INT_ WTP MAC _MACADDR_ EOS

   74 sta_acl_add: ADD ACL STA TYPE _INT_ _INT_ MAC _MACADDR_ EOS

   75 sta_acl_del_all: DEL ACL STA ALL EOS

   76 sta_acl_del: DEL ACL STA _INT_ MAC _MACADDR_ EOS

   77 sta_acl_request_all: SHOW STA ALL ACL EOS

   78 sta_acl_request_serial: SHOW STA _INT_ _INT_ ACL EOS

   79 cal_request_sta: SHOW ACL _INT_ STA MAC _MACADDR_ EOS

   80 cpu_set: SET CPU _INT_ EOS

   81 data_plan_run_time: SHOW RUNTIME EOS

   82 data_plan_cpu: SHOW CPU EOS

   83 data_plan_packet: SHOW PACKET EOS


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKHEAT (258) 44
TOKTARGET (259) 48
TOKTEMPERATURE (260) 48
SEND (261) 45
PACKET (262) 45 83
HELP (263) 46
EXIT (264) 6
EOS (265) 46 47 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
ALL (266) 58 59 63 65 69 71 75 77
DATA_PLAN_RESET (267) 49
ADD (268) 50 56 62 68 74
DEL (269) 51 57 58 63 64 69 70 75 76
SHOW (270) 52 54 59 60 61 65 66 67 71 72 73 77 78 79 81 82 83
SET (271) 53 55 80
AC (272) 50 51 52
WTP (273) 56 57 58 59 60 61 68 69 70 71 72 73
STA (274) 62 63 64 65 66 67 74 75 76 77 78 79
IP (275) 50 51 56 62
MAC (276) 50 51 56 57 61 62 64 67 68 70 73 74 76 79
TYPE (277) 68 74
CTR_PORT (278) 53
DATA_PORT (279) 53
MINI_JUMBO (280) 55
INDEX (281) 56 60 62 66
VLAN_ID (282) 56 62
RID (283) 62
ACL (284) 68 69 70 71 72 73 74 75 76 77 78 79
RUNTIME (285) 81
PORT (286) 54
CPU (287) 80 82
CAPWAP (288) 53 54
INFO (289) 52 59 65
STATE (290) 44 55
_INT_ (291) 50 51 53 56 57 60 61 62 64 66 67 68 70 72 73 74 76 78 79
    80
_IPADDR_ (292) 50 51 56 62
_MACADDR_ (293) 50 51 56 57 61 62 64 67 68 70 73 74 76 79


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
commands (40)
    on left: 1 2, on right: 0 2
command (41)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43,
    on right: 2
heat_switch (42)
    on left: 44, on right: 3
send_packet (43)
    on left: 45, on right: 4
help (44)
    on left: 46, on right: 8
enter (45)
    on left: 47, on right: 7
target_set (46)
    on left: 48, on right: 5
data_plan_reset (47)
    on left: 49, on right: 9
ac_add (48)
    on left: 50, on right: 10
ac_del (49)
    on left: 51, on right: 11
ac_request (50)
    on left: 52, on right: 12
port_set (51)
    on left: 53, on right: 13
port_request (52)
    on left: 54, on right: 14
mini_jumbo_set (53)
    on left: 55, on right: 15
wtp_add (54)
    on left: 56, on right: 16
wtp_del (55)
    on left: 57, on right: 17
wtp_del_all (56)
    on left: 58, on right: 18
wtp_request_all (57)
    on left: 59, on right: 19
wtp_request_serial (58)
    on left: 60, on right: 20
wtp_request (59)
    on left: 61, on right: 21
sta_add (60)
    on left: 62, on right: 22
sta_del_all (61)
    on left: 63, on right: 23
sta_del (62)
    on left: 64, on right: 24
sta_request_all (63)
    on left: 65, on right: 25
sta_request_serial (64)
    on left: 66, on right: 26
sta_request (65)
    on left: 67, on right: 27
wtp_acl_add (66)
    on left: 68, on right: 28
wtp_acl_del_all (67)
    on left: 69, on right: 29
wtp_acl_del (68)
    on left: 70, on right: 30
wtp_acl_request_all (69)
    on left: 71, on right: 31
wtp_acl_request_serial (70)
    on left: 72, on right: 32
cal_request_wtp (71)
    on left: 73, on right: 33
sta_acl_add (72)
    on left: 74, on right: 34
sta_acl_del_all (73)
    on left: 75, on right: 35
sta_acl_del (74)
    on left: 76, on right: 36
sta_acl_request_all (75)
    on left: 77, on right: 37
sta_acl_request_serial (76)
    on left: 78, on right: 38
cal_request_sta (77)
    on left: 79, on right: 39
cpu_set (78)
    on left: 80, on right: 40
data_plan_run_time (79)
    on left: 81, on right: 41
data_plan_cpu (80)
    on left: 82, on right: 42
data_plan_packet (81)
    on left: 83, on right: 43


state 0

    0 $accept: . commands $end

    $default  reduce using rule 1 (commands)

    commands  go to state 1


state 1

    0 $accept: commands . $end
    2 commands: commands . command

    $end             shift, and go to state 2
    TOKHEAT          shift, and go to state 3
    TOKTARGET        shift, and go to state 4
    SEND             shift, and go to state 5
    HELP             shift, and go to state 6
    EXIT             shift, and go to state 7
    EOS              shift, and go to state 8
    DATA_PLAN_RESET  shift, and go to state 9
    ADD              shift, and go to state 10
    DEL              shift, and go to state 11
    SHOW             shift, and go to state 12
    SET              shift, and go to state 13

    command                 go to state 14
    heat_switch             go to state 15
    send_packet             go to state 16
    help                    go to state 17
    enter                   go to state 18
    target_set              go to state 19
    data_plan_reset         go to state 20
    ac_add                  go to state 21
    ac_del                  go to state 22
    ac_request              go to state 23
    port_set                go to state 24
    port_request            go to state 25
    mini_jumbo_set          go to state 26
    wtp_add                 go to state 27
    wtp_del                 go to state 28
    wtp_del_all             go to state 29
    wtp_request_all         go to state 30
    wtp_request_serial      go to state 31
    wtp_request             go to state 32
    sta_add                 go to state 33
    sta_del_all             go to state 34
    sta_del                 go to state 35
    sta_request_all         go to state 36
    sta_request_serial      go to state 37
    sta_request             go to state 38
    wtp_acl_add             go to state 39
    wtp_acl_del_all         go to state 40
    wtp_acl_del             go to state 41
    wtp_acl_request_all     go to state 42
    wtp_acl_request_serial  go to state 43
    cal_request_wtp         go to state 44
    sta_acl_add             go to state 45
    sta_acl_del_all         go to state 46
    sta_acl_del             go to state 47
    sta_acl_request_all     go to state 48
    sta_acl_request_serial  go to state 49
    cal_request_sta         go to state 50
    cpu_set                 go to state 51
    data_plan_run_time      go to state 52
    data_plan_cpu           go to state 53
    data_plan_packet        go to state 54


state 2

    0 $accept: commands $end .

    $default  accept


state 3

   44 heat_switch: TOKHEAT . STATE

    STATE  shift, and go to state 55


state 4

   48 target_set: TOKTARGET . TOKTEMPERATURE

    TOKTEMPERATURE  shift, and go to state 56


state 5

   45 send_packet: SEND . PACKET

    PACKET  shift, and go to state 57


state 6

   46 help: HELP . EOS

    EOS  shift, and go to state 58


state 7

    6 command: EXIT .

    $default  reduce using rule 6 (command)


state 8

   47 enter: EOS .

    $default  reduce using rule 47 (enter)


state 9

   49 data_plan_reset: DATA_PLAN_RESET . EOS

    EOS  shift, and go to state 59


state 10

   50 ac_add: ADD . AC _INT_ IP _IPADDR_ MAC _MACADDR_ EOS
   56 wtp_add: ADD . WTP _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS
   62 sta_add: ADD . STA _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS
   68 wtp_acl_add: ADD . ACL WTP TYPE _INT_ _INT_ MAC _MACADDR_ EOS
   74 sta_acl_add: ADD . ACL STA TYPE _INT_ _INT_ MAC _MACADDR_ EOS

    AC   shift, and go to state 60
    WTP  shift, and go to state 61
    STA  shift, and go to state 62
    ACL  shift, and go to state 63


state 11

   51 ac_del: DEL . AC _INT_ IP _IPADDR_ MAC _MACADDR_ EOS
   57 wtp_del: DEL . WTP _INT_ MAC _MACADDR_ EOS
   58 wtp_del_all: DEL . WTP ALL EOS
   63 sta_del_all: DEL . STA ALL EOS
   64 sta_del: DEL . STA _INT_ MAC _MACADDR_ EOS
   69 wtp_acl_del_all: DEL . ACL WTP ALL EOS
   70 wtp_acl_del: DEL . ACL WTP _INT_ MAC _MACADDR_ EOS
   75 sta_acl_del_all: DEL . ACL STA ALL EOS
   76 sta_acl_del: DEL . ACL STA _INT_ MAC _MACADDR_ EOS

    AC   shift, and go to state 64
    WTP  shift, and go to state 65
    STA  shift, and go to state 66
    ACL  shift, and go to state 67


state 12

   52 ac_request: SHOW . AC INFO EOS
   54 port_request: SHOW . CAPWAP PORT EOS
   59 wtp_request_all: SHOW . WTP ALL INFO EOS
   60 wtp_request_serial: SHOW . WTP INDEX _INT_ _INT_ EOS
   61 wtp_request: SHOW . WTP _INT_ MAC _MACADDR_ EOS
   65 sta_request_all: SHOW . STA ALL INFO EOS
   66 sta_request_serial: SHOW . STA INDEX _INT_ _INT_ EOS
   67 sta_request: SHOW . STA _INT_ MAC _MACADDR_ EOS
   71 wtp_acl_request_all: SHOW . WTP ALL ACL EOS
   72 wtp_acl_request_serial: SHOW . WTP _INT_ _INT_ ACL EOS
   73 cal_request_wtp: SHOW . ACL _INT_ WTP MAC _MACADDR_ EOS
   77 sta_acl_request_all: SHOW . STA ALL ACL EOS
   78 sta_acl_request_serial: SHOW . STA _INT_ _INT_ ACL EOS
   79 cal_request_sta: SHOW . ACL _INT_ STA MAC _MACADDR_ EOS
   81 data_plan_run_time: SHOW . RUNTIME EOS
   82 data_plan_cpu: SHOW . CPU EOS
   83 data_plan_packet: SHOW . PACKET EOS

    PACKET   shift, and go to state 68
    AC       shift, and go to state 69
    WTP      shift, and go to state 70
    STA      shift, and go to state 71
    ACL      shift, and go to state 72
    RUNTIME  shift, and go to state 73
    CPU      shift, and go to state 74
    CAPWAP   shift, and go to state 75


state 13

   53 port_set: SET . CAPWAP CTR_PORT _INT_ DATA_PORT _INT_ EOS
   55 mini_jumbo_set: SET . MINI_JUMBO STATE EOS
   80 cpu_set: SET . CPU _INT_ EOS

    MINI_JUMBO  shift, and go to state 76
    CPU         shift, and go to state 77
    CAPWAP      shift, and go to state 78


state 14

    2 commands: commands command .

    $default  reduce using rule 2 (commands)


state 15

    3 command: heat_switch .

    $default  reduce using rule 3 (command)


state 16

    4 command: send_packet .

    $default  reduce using rule 4 (command)


state 17

    8 command: help .

    $default  reduce using rule 8 (command)


state 18

    7 command: enter .

    $default  reduce using rule 7 (command)


state 19

    5 command: target_set .

    $default  reduce using rule 5 (command)


state 20

    9 command: data_plan_reset .

    $default  reduce using rule 9 (command)


state 21

   10 command: ac_add .

    $default  reduce using rule 10 (command)


state 22

   11 command: ac_del .

    $default  reduce using rule 11 (command)


state 23

   12 command: ac_request .

    $default  reduce using rule 12 (command)


state 24

   13 command: port_set .

    $default  reduce using rule 13 (command)


state 25

   14 command: port_request .

    $default  reduce using rule 14 (command)


state 26

   15 command: mini_jumbo_set .

    $default  reduce using rule 15 (command)


state 27

   16 command: wtp_add .

    $default  reduce using rule 16 (command)


state 28

   17 command: wtp_del .

    $default  reduce using rule 17 (command)


state 29

   18 command: wtp_del_all .

    $default  reduce using rule 18 (command)


state 30

   19 command: wtp_request_all .

    $default  reduce using rule 19 (command)


state 31

   20 command: wtp_request_serial .

    $default  reduce using rule 20 (command)


state 32

   21 command: wtp_request .

    $default  reduce using rule 21 (command)


state 33

   22 command: sta_add .

    $default  reduce using rule 22 (command)


state 34

   23 command: sta_del_all .

    $default  reduce using rule 23 (command)


state 35

   24 command: sta_del .

    $default  reduce using rule 24 (command)


state 36

   25 command: sta_request_all .

    $default  reduce using rule 25 (command)


state 37

   26 command: sta_request_serial .

    $default  reduce using rule 26 (command)


state 38

   27 command: sta_request .

    $default  reduce using rule 27 (command)


state 39

   28 command: wtp_acl_add .

    $default  reduce using rule 28 (command)


state 40

   29 command: wtp_acl_del_all .

    $default  reduce using rule 29 (command)


state 41

   30 command: wtp_acl_del .

    $default  reduce using rule 30 (command)


state 42

   31 command: wtp_acl_request_all .

    $default  reduce using rule 31 (command)


state 43

   32 command: wtp_acl_request_serial .

    $default  reduce using rule 32 (command)


state 44

   33 command: cal_request_wtp .

    $default  reduce using rule 33 (command)


state 45

   34 command: sta_acl_add .

    $default  reduce using rule 34 (command)


state 46

   35 command: sta_acl_del_all .

    $default  reduce using rule 35 (command)


state 47

   36 command: sta_acl_del .

    $default  reduce using rule 36 (command)


state 48

   37 command: sta_acl_request_all .

    $default  reduce using rule 37 (command)


state 49

   38 command: sta_acl_request_serial .

    $default  reduce using rule 38 (command)


state 50

   39 command: cal_request_sta .

    $default  reduce using rule 39 (command)


state 51

   40 command: cpu_set .

    $default  reduce using rule 40 (command)


state 52

   41 command: data_plan_run_time .

    $default  reduce using rule 41 (command)


state 53

   42 command: data_plan_cpu .

    $default  reduce using rule 42 (command)


state 54

   43 command: data_plan_packet .

    $default  reduce using rule 43 (command)


state 55

   44 heat_switch: TOKHEAT STATE .

    $default  reduce using rule 44 (heat_switch)


state 56

   48 target_set: TOKTARGET TOKTEMPERATURE .

    $default  reduce using rule 48 (target_set)


state 57

   45 send_packet: SEND PACKET .

    $default  reduce using rule 45 (send_packet)


state 58

   46 help: HELP EOS .

    $default  reduce using rule 46 (help)


state 59

   49 data_plan_reset: DATA_PLAN_RESET EOS .

    $default  reduce using rule 49 (data_plan_reset)


state 60

   50 ac_add: ADD AC . _INT_ IP _IPADDR_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 79


state 61

   56 wtp_add: ADD WTP . _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS

    _INT_  shift, and go to state 80


state 62

   62 sta_add: ADD STA . _INT_ IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS

    _INT_  shift, and go to state 81


state 63

   68 wtp_acl_add: ADD ACL . WTP TYPE _INT_ _INT_ MAC _MACADDR_ EOS
   74 sta_acl_add: ADD ACL . STA TYPE _INT_ _INT_ MAC _MACADDR_ EOS

    WTP  shift, and go to state 82
    STA  shift, and go to state 83


state 64

   51 ac_del: DEL AC . _INT_ IP _IPADDR_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 84


state 65

   57 wtp_del: DEL WTP . _INT_ MAC _MACADDR_ EOS
   58 wtp_del_all: DEL WTP . ALL EOS

    ALL    shift, and go to state 85
    _INT_  shift, and go to state 86


state 66

   63 sta_del_all: DEL STA . ALL EOS
   64 sta_del: DEL STA . _INT_ MAC _MACADDR_ EOS

    ALL    shift, and go to state 87
    _INT_  shift, and go to state 88


state 67

   69 wtp_acl_del_all: DEL ACL . WTP ALL EOS
   70 wtp_acl_del: DEL ACL . WTP _INT_ MAC _MACADDR_ EOS
   75 sta_acl_del_all: DEL ACL . STA ALL EOS
   76 sta_acl_del: DEL ACL . STA _INT_ MAC _MACADDR_ EOS

    WTP  shift, and go to state 89
    STA  shift, and go to state 90


state 68

   83 data_plan_packet: SHOW PACKET . EOS

    EOS  shift, and go to state 91


state 69

   52 ac_request: SHOW AC . INFO EOS

    INFO  shift, and go to state 92


state 70

   59 wtp_request_all: SHOW WTP . ALL INFO EOS
   60 wtp_request_serial: SHOW WTP . INDEX _INT_ _INT_ EOS
   61 wtp_request: SHOW WTP . _INT_ MAC _MACADDR_ EOS
   71 wtp_acl_request_all: SHOW WTP . ALL ACL EOS
   72 wtp_acl_request_serial: SHOW WTP . _INT_ _INT_ ACL EOS

    ALL    shift, and go to state 93
    INDEX  shift, and go to state 94
    _INT_  shift, and go to state 95


state 71

   65 sta_request_all: SHOW STA . ALL INFO EOS
   66 sta_request_serial: SHOW STA . INDEX _INT_ _INT_ EOS
   67 sta_request: SHOW STA . _INT_ MAC _MACADDR_ EOS
   77 sta_acl_request_all: SHOW STA . ALL ACL EOS
   78 sta_acl_request_serial: SHOW STA . _INT_ _INT_ ACL EOS

    ALL    shift, and go to state 96
    INDEX  shift, and go to state 97
    _INT_  shift, and go to state 98


state 72

   73 cal_request_wtp: SHOW ACL . _INT_ WTP MAC _MACADDR_ EOS
   79 cal_request_sta: SHOW ACL . _INT_ STA MAC _MACADDR_ EOS

    _INT_  shift, and go to state 99


state 73

   81 data_plan_run_time: SHOW RUNTIME . EOS

    EOS  shift, and go to state 100


state 74

   82 data_plan_cpu: SHOW CPU . EOS

    EOS  shift, and go to state 101


state 75

   54 port_request: SHOW CAPWAP . PORT EOS

    PORT  shift, and go to state 102


state 76

   55 mini_jumbo_set: SET MINI_JUMBO . STATE EOS

    STATE  shift, and go to state 103


state 77

   80 cpu_set: SET CPU . _INT_ EOS

    _INT_  shift, and go to state 104


state 78

   53 port_set: SET CAPWAP . CTR_PORT _INT_ DATA_PORT _INT_ EOS

    CTR_PORT  shift, and go to state 105


state 79

   50 ac_add: ADD AC _INT_ . IP _IPADDR_ MAC _MACADDR_ EOS

    IP  shift, and go to state 106


state 80

   56 wtp_add: ADD WTP _INT_ . IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS

    IP  shift, and go to state 107


state 81

   62 sta_add: ADD STA _INT_ . IP _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS

    IP  shift, and go to state 108


state 82

   68 wtp_acl_add: ADD ACL WTP . TYPE _INT_ _INT_ MAC _MACADDR_ EOS

    TYPE  shift, and go to state 109


state 83

   74 sta_acl_add: ADD ACL STA . TYPE _INT_ _INT_ MAC _MACADDR_ EOS

    TYPE  shift, and go to state 110


state 84

   51 ac_del: DEL AC _INT_ . IP _IPADDR_ MAC _MACADDR_ EOS

    IP  shift, and go to state 111


state 85

   58 wtp_del_all: DEL WTP ALL . EOS

    EOS  shift, and go to state 112


state 86

   57 wtp_del: DEL WTP _INT_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 113


state 87

   63 sta_del_all: DEL STA ALL . EOS

    EOS  shift, and go to state 114


state 88

   64 sta_del: DEL STA _INT_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 115


state 89

   69 wtp_acl_del_all: DEL ACL WTP . ALL EOS
   70 wtp_acl_del: DEL ACL WTP . _INT_ MAC _MACADDR_ EOS

    ALL    shift, and go to state 116
    _INT_  shift, and go to state 117


state 90

   75 sta_acl_del_all: DEL ACL STA . ALL EOS
   76 sta_acl_del: DEL ACL STA . _INT_ MAC _MACADDR_ EOS

    ALL    shift, and go to state 118
    _INT_  shift, and go to state 119


state 91

   83 data_plan_packet: SHOW PACKET EOS .

    $default  reduce using rule 83 (data_plan_packet)


state 92

   52 ac_request: SHOW AC INFO . EOS

    EOS  shift, and go to state 120


state 93

   59 wtp_request_all: SHOW WTP ALL . INFO EOS
   71 wtp_acl_request_all: SHOW WTP ALL . ACL EOS

    ACL   shift, and go to state 121
    INFO  shift, and go to state 122


state 94

   60 wtp_request_serial: SHOW WTP INDEX . _INT_ _INT_ EOS

    _INT_  shift, and go to state 123


state 95

   61 wtp_request: SHOW WTP _INT_ . MAC _MACADDR_ EOS
   72 wtp_acl_request_serial: SHOW WTP _INT_ . _INT_ ACL EOS

    MAC    shift, and go to state 124
    _INT_  shift, and go to state 125


state 96

   65 sta_request_all: SHOW STA ALL . INFO EOS
   77 sta_acl_request_all: SHOW STA ALL . ACL EOS

    ACL   shift, and go to state 126
    INFO  shift, and go to state 127


state 97

   66 sta_request_serial: SHOW STA INDEX . _INT_ _INT_ EOS

    _INT_  shift, and go to state 128


state 98

   67 sta_request: SHOW STA _INT_ . MAC _MACADDR_ EOS
   78 sta_acl_request_serial: SHOW STA _INT_ . _INT_ ACL EOS

    MAC    shift, and go to state 129
    _INT_  shift, and go to state 130


state 99

   73 cal_request_wtp: SHOW ACL _INT_ . WTP MAC _MACADDR_ EOS
   79 cal_request_sta: SHOW ACL _INT_ . STA MAC _MACADDR_ EOS

    WTP  shift, and go to state 131
    STA  shift, and go to state 132


state 100

   81 data_plan_run_time: SHOW RUNTIME EOS .

    $default  reduce using rule 81 (data_plan_run_time)


state 101

   82 data_plan_cpu: SHOW CPU EOS .

    $default  reduce using rule 82 (data_plan_cpu)


state 102

   54 port_request: SHOW CAPWAP PORT . EOS

    EOS  shift, and go to state 133


state 103

   55 mini_jumbo_set: SET MINI_JUMBO STATE . EOS

    EOS  shift, and go to state 134


state 104

   80 cpu_set: SET CPU _INT_ . EOS

    EOS  shift, and go to state 135


state 105

   53 port_set: SET CAPWAP CTR_PORT . _INT_ DATA_PORT _INT_ EOS

    _INT_  shift, and go to state 136


state 106

   50 ac_add: ADD AC _INT_ IP . _IPADDR_ MAC _MACADDR_ EOS

    _IPADDR_  shift, and go to state 137


state 107

   56 wtp_add: ADD WTP _INT_ IP . _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS

    _IPADDR_  shift, and go to state 138


state 108

   62 sta_add: ADD STA _INT_ IP . _IPADDR_ MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS

    _IPADDR_  shift, and go to state 139


state 109

   68 wtp_acl_add: ADD ACL WTP TYPE . _INT_ _INT_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 140


state 110

   74 sta_acl_add: ADD ACL STA TYPE . _INT_ _INT_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 141


state 111

   51 ac_del: DEL AC _INT_ IP . _IPADDR_ MAC _MACADDR_ EOS

    _IPADDR_  shift, and go to state 142


state 112

   58 wtp_del_all: DEL WTP ALL EOS .

    $default  reduce using rule 58 (wtp_del_all)


state 113

   57 wtp_del: DEL WTP _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 143


state 114

   63 sta_del_all: DEL STA ALL EOS .

    $default  reduce using rule 63 (sta_del_all)


state 115

   64 sta_del: DEL STA _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 144


state 116

   69 wtp_acl_del_all: DEL ACL WTP ALL . EOS

    EOS  shift, and go to state 145


state 117

   70 wtp_acl_del: DEL ACL WTP _INT_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 146


state 118

   75 sta_acl_del_all: DEL ACL STA ALL . EOS

    EOS  shift, and go to state 147


state 119

   76 sta_acl_del: DEL ACL STA _INT_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 148


state 120

   52 ac_request: SHOW AC INFO EOS .

    $default  reduce using rule 52 (ac_request)


state 121

   71 wtp_acl_request_all: SHOW WTP ALL ACL . EOS

    EOS  shift, and go to state 149


state 122

   59 wtp_request_all: SHOW WTP ALL INFO . EOS

    EOS  shift, and go to state 150


state 123

   60 wtp_request_serial: SHOW WTP INDEX _INT_ . _INT_ EOS

    _INT_  shift, and go to state 151


state 124

   61 wtp_request: SHOW WTP _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 152


state 125

   72 wtp_acl_request_serial: SHOW WTP _INT_ _INT_ . ACL EOS

    ACL  shift, and go to state 153


state 126

   77 sta_acl_request_all: SHOW STA ALL ACL . EOS

    EOS  shift, and go to state 154


state 127

   65 sta_request_all: SHOW STA ALL INFO . EOS

    EOS  shift, and go to state 155


state 128

   66 sta_request_serial: SHOW STA INDEX _INT_ . _INT_ EOS

    _INT_  shift, and go to state 156


state 129

   67 sta_request: SHOW STA _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 157


state 130

   78 sta_acl_request_serial: SHOW STA _INT_ _INT_ . ACL EOS

    ACL  shift, and go to state 158


state 131

   73 cal_request_wtp: SHOW ACL _INT_ WTP . MAC _MACADDR_ EOS

    MAC  shift, and go to state 159


state 132

   79 cal_request_sta: SHOW ACL _INT_ STA . MAC _MACADDR_ EOS

    MAC  shift, and go to state 160


state 133

   54 port_request: SHOW CAPWAP PORT EOS .

    $default  reduce using rule 54 (port_request)


state 134

   55 mini_jumbo_set: SET MINI_JUMBO STATE EOS .

    $default  reduce using rule 55 (mini_jumbo_set)


state 135

   80 cpu_set: SET CPU _INT_ EOS .

    $default  reduce using rule 80 (cpu_set)


state 136

   53 port_set: SET CAPWAP CTR_PORT _INT_ . DATA_PORT _INT_ EOS

    DATA_PORT  shift, and go to state 161


state 137

   50 ac_add: ADD AC _INT_ IP _IPADDR_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 162


state 138

   56 wtp_add: ADD WTP _INT_ IP _IPADDR_ . MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ EOS

    MAC  shift, and go to state 163


state 139

   62 sta_add: ADD STA _INT_ IP _IPADDR_ . MAC _MACADDR_ INDEX _INT_ VLAN_ID _INT_ MAC _MACADDR_ RID _INT_ EOS

    MAC  shift, and go to state 164


state 140

   68 wtp_acl_add: ADD ACL WTP TYPE _INT_ . _INT_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 165


state 141

   74 sta_acl_add: ADD ACL STA TYPE _INT_ . _INT_ MAC _MACADDR_ EOS

    _INT_  shift, and go to state 166


state 142

   51 ac_del: DEL AC _INT_ IP _IPADDR_ . MAC _MACADDR_ EOS

    MAC  shift, and go to state 167


state 143

   57 wtp_del: DEL WTP _INT_ MAC _MACADDR_ . EOS

    EOS  shift, and go to state 168


state 144

   64 sta_del: DEL STA _INT_ MAC _MACADDR_ . EOS

    EOS  shift, and go to state 169


state 145

   69 wtp_acl_del_all: DEL ACL WTP ALL EOS .

    $default  reduce using rule 69 (wtp_acl_del_all)


state 146

   70 wtp_acl_del: DEL ACL WTP _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 170


state 147

   75 sta_acl_del_all: DEL ACL STA ALL EOS .

    $default  reduce using rule 75 (sta_acl_del_all)


state 148

   76 sta_acl_del: DEL ACL STA _INT_ MAC . _MACADDR_ EOS

    _MACADDR_  shift, and go to state 171

